Changelog for mk-show-grants:

2007-12-16: version 1.0.7

   * Updated common code, added debugging.

2007-12-07: version 1.0.6

   * Updated common code.

2007-11-25: version 1.0.5

   * --askpass ignored the entered password (bug #1838131).

2007-11-04: version 1.0.4

   * Made command-line help easier to use.
   * Removed the dependency on Term::ReadKey.
   * Replaced some code with modules that are unit-tested.

2007-08-23: version 1.0.3

   * MySQL socket connection option didn't work.
   * Added --askpass option.

2007-06-22: version 1.0.2

   * Documentation.

2007-06-10: version 1.0.1

   * Added --defaults-file option.
   * Added standard --version command-line option.
   * Added --defaults-file option.

2007-03-25: version 1.0.0

   * Rewrite the GetOpt::Long code and rely on DBD to read MySQL option files.
   * Fix the --revoke and --separate options so revokes are not separate unless
     specified.  Add REVOKE GRANT OPTION when the user has it.

2007-03-19: version 0.9.1

   * Added --separate, --drop, --revoke and --flush options.

2007-03-17: version 0.9.0

   * Initial release.