@@ -4,7 +4,7 @@ use strict;
 use warnings FATAL => 'all';
 
 use English qw('-no_match_vars);
-use Test::More tests => 5;
+use Test::More tests => 7;
 
 my $output = `perl ../mk-show-grants -d -f -r -s`;
 
@@ -36,4 +36,18 @@ like(
    $output,
    qr/DELETE/,
    'Added DELETE for older MySQL versions',
+);
+
+like(
+   $output,
+   qr/at \d{4}/,
+   'It has a timestamp',
+);
+
+$output = `perl ../mk-show-grants --no-timestamp -d -f -r -s`;
+
+unlike(
+   $output,
+   qr/at \d{4}/,
+   'It has no timestamp',
 );
